Создать TODO list

--- a/src/main/resources/templates/descriptionItem.html
+++ b/src/main/resources/templates/descriptionItem.html
@@ -52,7 +52,7 @@
                     </tr>
                     <tr>
                         <td>Дата создания</td>
-                        <td th:text="${item.created}"/>
+                        <td th:text="${#temporals.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
                     </tr>
                     <tr>
                         <td>Статус</td>
