--- a/src/main/resources/templates/descriptionItem.html
+++ b/src/main/resources/templates/descriptionItem.html
@@ -34,6 +34,10 @@
                 <a class="nav-item nav-link" th:href="@{/items}">Все задания</a>
                 <a class="nav-item nav-link" th:href="@{/formNewItems}">Новые</a>
                 <a class="nav-item nav-link" th:href="@{/formDoneItems}">Выполненные</a>
+                <a class="nav-item nav-link" th:href="@{/loginPage}">
+                    <span th:text="${user.name}"></span>
+                    <span> | Войти</span>
+                </a>
             </div>
         </div>
     </nav>
@@ -53,6 +57,10 @@
                     <tr>
                         <td>Дата создания</td>
                         <td th:text="${#temporals.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
+                    </tr>
+                    <tr>
+                        <td>Автор задания</td>
+                        <td th:text="${item.user.name}"/>
                     </tr>
                     <tr>
                         <td>Статус</td>
