--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -35,6 +35,14 @@
                 <a class="nav-item nav-link" th:href="@{/items}">Все задания</a>
                 <a class="nav-item nav-link" th:href="@{/formNewItems}">Новые</a>
                 <a class="nav-item nav-link" th:href="@{/formDoneItems}">Выполненные</a>
+                <a class="nav-item nav-link" th:if="${user.name == 'Гость'}" th:href="@{/loginPage}">
+                    <span th:text="${user.name}"></span>
+                    <span> | Войти</span>
+                </a>
+                <a class="nav-item nav-link" th:if="${user.name != 'Гость'}" th:href="@{/logout}">
+                    <span th:text="${user.name}"></span>
+                    <span> | Выйти</span>
+                </a>
             </div>
         </div>
     </nav>
@@ -45,7 +53,8 @@
                 <th scope="col">№</th>
                 <th scope="col">Задание</th>
                 <th scope="col">Дата создания</th>
-                <th scope="col">выполнено</th>
+                <th scope="col">Выполнено</th>
+                <th scope="col">Автор задания</th>
             </tr>
             </thead>
             <tbody>
@@ -65,6 +74,7 @@
                         <i class="fa fa-square-o"></i>
                     </span>
                 </td>
+                <td th:text="${item.user.name}"/>
             </tr>
             </tbody>
         </table>
