--- a/src/main/resources/templates/descriptionItem.html
+++ b/src/main/resources/templates/descriptionItem.html
@@ -55,6 +55,10 @@
                         <td th:text="${item.name}"/>
                     </tr>
                     <tr>
+                        <td>Категория</td>
+                        <td th:each="category: ${item.getCategories()}" th:text="${category.name}"></td>
+                    </tr>
+                    <tr>
                         <td>Дата создания</td>
                         <td th:text="${#temporals.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
                     </tr>
