--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -43,8 +43,32 @@
     </nav>
     <div class="row">
         <div class="card" style="width: 100%">
+                    <div class="card-header">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col"><small>№</small></th>
+                                <th scope="col"><small>Категория</small></th>
+                                <th scope="col"><small>Дата создания</small></th>
+                                <th scope="col"><small>Выполнено</small></th>
+                                <th scope="col"><small>Автор задания</small></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                                <td th:text="${item.id}"/>
+                                <td>
+                                    <span th:each="category: ${item.getCategories()}" th:text="${category.name} + ' ' + ' ' "></span>
+                                </td>
+                                <td th:text="${#temporals.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
+                                <td th:if="${item.done}">Выполнено</td>
+                                <td th:if="${!item.done}">Не выполнено</td>
+                                <td th:text="${item.user.name}"/>
+                            </tbody>
+                        </table>
+                        </table>
+                    </div>
             <div class="card-header">
-                Введите новые данные
+               <h6> Введите новые данные </h6>
             </div>
             <div class="card-body">
                 <form th:action="@{/updateItem}" method="POST" th:object="${item}">
@@ -57,10 +81,22 @@
                             <input type="text" class="form-control" size="30" name="name" id="name" th:field="*{name}">
                         </label>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label>Подробное описание задания:</label>
                         <input type="text" class="form-control" name="description" id="description"
                                th:field="*{description}">
+                    </div>
+                    <div class="form-group">
+                        <label for="category.id">Категории:
+                            <select class="form-control" id="category.id" name="categoryId" multiple="multiple"
+                                    size="3">
+                                <option th:each="category : ${categories}" th:value="${category.id}"
+                                        th:text="${category.name}"></option>
+                            </select>
+                        </label>
+                        <p><small>выбор нескольких категорий находящихся рядом выделяются курсором или с кнопкой Shift,
+                            категории находящиеся не рядом выделяются c кнопкой Ctrl</small></p>
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
