--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -69,7 +69,7 @@
                 <td>
                    <span th:each="category: ${item.getCategories()}" th:text="${category.name} + ' ' "></span>
                 </td>
-                <td th:text="${#temporals.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
+                <td th:text="${#dates.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
                 <td>
                     <span th:if="${item.done}">
                         <i class="fa fa-check-square-o"></i>
