--- a/src/main/resources/templates/descriptionItem.html
+++ b/src/main/resources/templates/descriptionItem.html
@@ -60,7 +60,7 @@
                     </tr>
                     <tr>
                         <td>Дата создания</td>
-                        <td th:text="${#temporals.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
+                        <td th:text="${#dates.format(item.created, 'dd-MM-yyyy HH:mm:ss')}"/>
                     </tr>
                     <tr>
                         <td>Автор задания</td>
